src/test/deca/context/invalid/16_LeftNull.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 12: ContextualError: NotIntAndNotFloatType
// 
// Historique:
//    cree le 01/01/2022

{
	// Doit etre refuse.
   	int i = null + 2;
}
